
cmake_minimum_required(VERSION 2.4)

PROJECT(util)

IF(${CMAKE_GENERATOR} STREQUAL "MinGW Makefiles")
ADD_DEFINITIONS(-fshort-wchar)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3")
SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "$ENV{CXXFLAGS} -O3 -g -ggdb")
#SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
ELSE()
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /machine:x86 ")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB ")
#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} /MTd")
#SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} /MT")
#SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "$ENV{CXXFLAGS} /MT /Zi")
ENDIF()

SET(SRC_LIST
filemap.cpp
pipe.cpp
strhelp.cpp
inject.cpp
memhelp.cpp
)

ADD_LIBRARY(util_static STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(util_static PROPERTIES OUTPUT_NAME "util" PREFIX "lib")
SET_TARGET_PROPERTIES(util_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

#install
INSTALL(TARGETS util_static ARCHIVE DESTINATION lib)
INSTALL(FILES filemap.h DESTINATION include)
INSTALL(FILES pipe.h DESTINATION include)
INSTALL(FILES strhelp.h DESTINATION include)
INSTALL(FILES pshpack1.h DESTINATION include)
INSTALL(FILES pshpack2.h DESTINATION include)
INSTALL(FILES pshpack4.h DESTINATION include)
INSTALL(FILES pshpack8.h DESTINATION include)
INSTALL(FILES poppack.h DESTINATION include)
